# PerformanceTests

sources/: CMakeLists.txt  PowSqrtTest.cpp  PowTest.cpp  SizeOfDatatypes.cpp  SqrtTest.cpp  scpr.cpp
sources/Base/: CMakeLists.txt  CPUTimeTimer.h  RunTimeTimer.h
